--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,7 +19,10 @@
     "framer-motion": "^12.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.5.2",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
     "zod": "^3.24.1"
