--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
@@ -25,6 +26,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
+    "react-scroll": "^1.9.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
