--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.5.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^9.2.0",
