--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
     "react-scroll": "^1.9.0",
+    "shadcn-ui": "^0.9.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
