--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.9.7"
+    "mongoose": "^8.9.7",
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
