--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@
 PORT=8080
 
 JWT_SECRET= 'ds123@3l:-))'
+JWT_REFRESH_SECRET= 'asfsa1112@@]'
 
 MONGO_DB_URI='mongodb+srv://nikolalimpet:Lkexdu4YYYZobbr2@one.alj0d.mongodb.net/Pizza?retryWrites=true&w=majority&appName=One'
 
