--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.28.2",
     "react-scroll": "^1.9.0",
     "shadcn-ui": "^0.9.4",
+    "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
