--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "server": "json-server --watch db.json --port 3000",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port 5173 --host",
+    "test": "vitest",
+    "coverage": "vitset run --coverage",
+    "docker:dev": "vite --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -40,9 +43,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-c8": "^0.33.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
@@ -52,6 +58,7 @@
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.0.5"
   }
 }
