--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -2,12 +2,19 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Add package files
 COPY package*.json ./
 
-RUN npm install
+# Install dependencies using clean install
+RUN npm ci
 
+# Copy source code
 COPY . .
+
+# Build the application
+RUN npm run build
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# Use the start command instead of dev for better production setup
+CMD ["npm", "run", "start"]
