--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "start": "vite preview --port 5173 --host",
     "test": "vitest",
-    "coverage": "vitset run --coverage",
-    "docker:dev": "vite --host 0.0.0.0 --port 3000"
+    "coverage": "vitset --coverage",
+    "docker:dev": "vite --host 0.0.0.0 --port 5173"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -48,7 +48,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-c8": "latest",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
@@ -59,6 +59,6 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5",
-    "vitest": "^3.0.5"
+    "vitest": "latest"
   }
 }
