--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -53,22 +53,22 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:${{ github.sha }}
             ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:latest
 
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        env:
-          GITHUB_SHA: ${{ github.sha }}
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          envs: GITHUB_SHA
-          script: |
-            cd /opt/pizza-app
-            echo "Pulling new images..."
-            docker-compose pull
-            echo "Updating docker-compose..."
-            docker-compose up -d
-            echo "Cleaning up old images..."
-            docker image prune -f
+      # - name: Deploy to Server
+      #   uses: appleboy/ssh-action@master
+      #   env:
+      #     GITHUB_SHA: ${{ github.sha }}
+      #   with:
+      #     host: ${{ secrets.SERVER_HOST }}
+      #     username: ${{ secrets.SERVER_USERNAME }}
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     envs: GITHUB_SHA
+      #     script: |
+      #       cd /opt/pizza-app
+      #       echo "Pulling new images..."
+      #       docker-compose pull
+      #       echo "Updating docker-compose..."
+      #       docker-compose up -d
+      #       echo "Cleaning up old images..."
+      #       docker image prune -f
 
             
