--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -24,7 +24,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
+          # Remove cache option since we'll handle it manually
+          
+      - name: Install Frontend Dependencies
+        working-directory: ./front-end
+        run: |
+          npm ci
+          npm run build
+
+      - name: Install Backend Dependencies
+        working-directory: ./backend
+        run: npm ci
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -52,23 +62,3 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:${{ github.sha }}
             ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:latest
-
-      # - name: Deploy to Server
-      #   uses: appleboy/ssh-action@master
-      #   env:
-      #     GITHUB_SHA: ${{ github.sha }}
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USERNAME }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     envs: GITHUB_SHA
-      #     script: |
-      #       cd /opt/pizza-app
-      #       echo "Pulling new images..."
-      #       docker-compose pull
-      #       echo "Updating docker-compose..."
-      #       docker-compose up -d
-      #       echo "Cleaning up old images..."
-      #       docker image prune -f
-
-            
