--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -20,7 +20,11 @@ jobs:
 
       - name: Install Frontend Dependencies
         working-directory: ./front-end
-        run: npm ci
+        run: |
+          if [ ! -f package-lock.json ]; then
+            npm install --package-lock
+          fi
+          npm ci
 
       - name: Run Frontend Tests
         working-directory: ./front-end
@@ -28,35 +32,12 @@ jobs:
 
       - name: Install Backend Dependencies
         working-directory: ./backend
-        run: npm ci
+        run: |
+          if [ ! -f package-lock.json ]; then
+            npm install --package-lock
+          fi
+          npm ci
 
       - name: Run Backend Tests
         working-directory: ./backend
         run: npm test
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install Frontend Dependencies
-        working-directory: ./front-end
-        run: npm ci
-
-      # - name: Lint Frontend
-      #   working-directory: ./front-end
-      #   run: npm run lint
-
-      - name: Install Backend Dependencies
-        working-directory: ./backend
-        run: npm ci
-
-      # - name: Lint Backend
-      #   working-directory: ./backend
-      #   run: npm run lint
