--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -55,15 +55,6 @@ jobs:
             npm ci
           fi
 
-      # - name: Run Frontend Tests
-      #   working-directory: ./front-end
-      #   run: npm test
-
-      # - name: Run Backend Tests
-      #   working-directory: ./backend
-      #   run: npm test   
-
-
   deploy:
     needs: test
     runs-on: ubuntu-latest
@@ -85,19 +76,19 @@ jobs:
         with:
           context: ./front-end
           push: true
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pizza-frontend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pizza-frontend:buildcache,mode=max
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache,mode=max
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/pizza-frontend:${{ github.sha }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/pizza-frontend:latest
+            yuujin12/big-fat-pizza:${{ github.sha }}
+            yuujin12/big-fat-pizza:latest
 
       - name: Build and push Backend
         uses: docker/build-push-action@v4
         with:
           context: ./backend
           push: true
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:buildcache,mode=max
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache,mode=max
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:${{ github.sha }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/pizza-backend:latest
+            yuujin12/big-fat-pizza:${{ github.sha }}
+            yuujin12/big-fat-pizza:latest
