--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: yuujin12
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Frontend
@@ -76,19 +76,19 @@ jobs:
         with:
           context: ./front-end
           push: true
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache,mode=max
+          cache-from: type=registry,ref=yuujin12/big-fat-pizza:frontend-cache
+          cache-to: type=registry,ref=yuujin12/big-fat-pizza:frontend-cache,mode=max
           tags: |
-            yuujin12/big-fat-pizza:${{ github.sha }}
-            yuujin12/big-fat-pizza:latest
+            yuujin12/big-fat-pizza:frontend-${{ github.sha }}
+            yuujin12/big-fat-pizza:frontend-latest
 
       - name: Build and push Backend
         uses: docker/build-push-action@v4
         with:
           context: ./backend
           push: true
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/big-fat-pizza:buildcache,mode=max
+          cache-from: type=registry,ref=yuujin12/big-fat-pizza:backend-cache
+          cache-to: type=registry,ref=yuujin12/big-fat-pizza:backend-cache,mode=max
           tags: |
-            yuujin12/big-fat-pizza:${{ github.sha }}
-            yuujin12/big-fat-pizza:latest
+            yuujin12/big-fat-pizza:backend-${{ github.sha }}
+            yuujin12/big-fat-pizza:backend-latest
