--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=8080
-      # - MONGO_DB_URI=mongodb://admin:password@mongodb:27017/pizza?authSource=admin
+      - MONGO_DB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017/pizza?authSource=admin
     volumes:
       - ./backend:/app
       - /app/node_modules
@@ -39,8 +39,8 @@ services:
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=Lkexdu4YYYZobbr2
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
       - MONGO_INITDB_DATABASE=pizza
     volumes:
       - mongodb_data:/data/db
